# CNNFeatureVisualizer

./: .gitignore  Dockerfile  README.md  requirements.txt  temp_requests.py  visualizer.py
minio/: install-minio.sh
postgres-deployment/: install.sh  postgres-deployment.yaml
rest-server/: rest-client.py  temp.py
rest-server/deployment/: rest-deployment.yaml  rest-ingress.yaml  rest-service.yaml
rest-server/rest-application/: Dockerfile  Makefile  init_tables.py
rest-server/rest-application/app/: routes.py
src/: cnn_layer_visualization.py  test_model.py  train_mnist.py  train_model.py  visualizer.py  worker.py
src/torchboard/: test_module.py  utils.py
torchboard/: __init__.py  core.py  install.sh  pyproject.toml  rest.py  setup.py  visualizers.py
torchboard/src/: tb_utils.py  test_module.py
worker/: Dockerfile  Makefile  old_worker.py  received_model_source_code.py  requirements.txt  worker-deployment.yaml  worker.py
worker/torchboard/: __init__.py  core.py  rest.py  setup.py  utils.py  visualizers.py
