[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchboard"
version = "0.1.0"
authors = [
  {
    name="Kaustubh Milind Kulkarni",
    email="kaustubhmilind.kulkarni@colorado.edu"
  },
  {
    name="Jayant Duneja",
    email="author@example.com"
  },
]
requires-python = ">=3.10"
