[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchboard"
version = "0.1.0"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[[project.authors]]
name = "Kaustubh Milind Kulkarni"
email = "kaustubhmilind.kulkarni@colorado.com"

[[project.authors]]
name = "Jayant Duneja"
email = "jayant.duneja@colorado.com"
